--- a/index.html
+++ b/index.html
@@ -136,14 +136,15 @@
 
     // TODO: Replace with your Firebase config
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "snapmap-lite.firebaseapp.com",
-      databaseURL: "https://snapmap-lite.firebaseio.com",
-      projectId: "snapmap-lite",
-      storageBucket: "snapmap-lite.appspot.com",
-      messagingSenderId: "123456789",
-      appId: "1:123456789:web:abcdef"
-    };
+  apiKey: "AIzaSyAq8yzrDUtsJbVk9Vl-H5d18rFWvPl9T_4",
+  authDomain: "snapmap-lite.firebaseapp.com",
+  databaseURL: "https://snapmap-lite-default-rtdb.firebaseio.com",
+  projectId: "snapmap-lite",
+  storageBucket: "snapmap-lite.firebasestorage.app",
+  messagingSenderId: "874569389218",
+  appId: "1:874569389218:web:4dd9cd48cb2fa2a74e73fb",
+  measurementId: "G-R0MNRM3NCG"
+};
 
     const app = initializeApp(firebaseConfig);
     window.firebaseApp = app;
