--- a/index.html
+++ b/index.html
@@ -1,154 +1,86 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>SnapMap Lite — Enhanced</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet"
-        href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
-  <link rel="stylesheet" href="css/style.css">
-  <style>
-    /* Ensure modals cover everything when active */
-    .modal { z-index: 2000; }
-    .hidden { display:none; }
-    #app { display: grid; grid-template-columns: 320px 1fr; height: 100vh; }
-    main { display:flex; }
-    .map-wrap { flex:1; position:relative; }
-    #map { width:100%; height:100%; }
-    .avatar-cosmetics { margin-top:6px; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SnapMap Lite</title>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css"/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css"/>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div id="app">
-    <header>
-      <h1>SnapMap Lite — Enhanced 🚀</h1>
-      <div class="controls">
-        <button id="loginBtn" class="btn">Login</button>
-        <button id="logoutBtn" class="btn secondary" style="display:none">Logout</button>
-        <label class="small">Avatar: <input id="avatarInput" type="file" accept="image/*" /></label>
-        <button id="toggleSim" class="btn">Toggle Sim Friends</button>
-        <button id="spawnItem" class="btn">Spawn Item 🎁</button>
-        <button id="openInventory" class="btn">Inventory 💼</button>
-        <button id="openListingModal" class="btn">Post Listing</button>
-      </div>
-    </header>
 
-    <main>
-      <aside class="sidebar">
-        <div class="profile">
-          <div class="avatar-wrapper">
-            <img id="myAvatar" src="assets/avatar-default.png" alt="avatar">
-            <div id="avatarCosmetics" class="avatar-cosmetics"></div>
-          </div>
-          <div>
-            <div id="displayName" contenteditable="true" class="name">You</div>
-            <div class="small">Balance: $<span id="balance">100</span></div>
-            <div class="small">Status: <span id="status">Initializing…</span></div>
-            <div class="small">👤 <span id="authStatus">Not logged in</span></div>
-          </div>
-        </div>
-        <div class="legend">
-          <h3>Legend</h3>
-          <ul>
-            <li>📍 = You</li>
-            <li>🙂 = Friends</li>
-            <li>🎁 = Items</li>
-            <li>📌 = Listings</li>
-          </ul>
-        </div>
-      </aside>
-
-      <section class="map-wrap">
-        <div id="map"></div>
-      </section>
-    </main>
+<!-- Floating Header -->
+<div id="header">
+  <div id="authStatus">Not logged in</div>
+  <div id="userPanel">
+    <img id="myAvatar" src="assets/default-profile.png" alt="Profile" />
+    <span id="displayName">You</span>
+    <span id="balance">$0</span>
+    <button id="loginBtn">Login</button>
+    <button id="logoutBtn" style="display:none;">Logout</button>
   </div>
+</div>
 
-  <!-- Login Modal -->
-  <div id="loginModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>🔐 Sign In</h3>
-      <input type="email" id="emailInput" placeholder="Email" class="input-field" />
-      <input type="password" id="passwordInput" placeholder="Password" class="input-field" />
-      <div class="modal-actions">
-        <button id="signInBtn" class="btn">Sign In</button>
-        <button id="signUpBtn" class="btn secondary">Sign Up</button>
-        <button id="closeLoginBtn" class="btn secondary">Cancel</button>
-      </div>
-      <div id="authError" class="error-msg"></div>
-    </div>
+<!-- Sidebar Filters -->
+<div id="sidebar">
+  <h3>Filter Listings</h3>
+  <select id="filterCategory"></select>
+</div>
+
+<!-- Map -->
+<div id="map"></div>
+
+<!-- Login Modal -->
+<div class="modal hidden" id="loginModal">
+  <div class="modal-content">
+    <span class="close" id="closeLoginBtn">&times;</span>
+    <h2>Login / Sign Up</h2>
+    <input type="email" id="emailInput" placeholder="Email" />
+    <input type="password" id="passwordInput" placeholder="Password" />
+    <div id="authError" class="error"></div>
+    <button id="signInBtn">Sign In</button>
+    <button id="signUpBtn">Sign Up</button>
   </div>
+</div>
 
-  <!-- Inventory Modal -->
-  <div id="inventoryModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>Your Inventory & Listings 💼</h3>
-      <div id="inventoryList"></div>
-      <div class="modal-actions">
-        <button id="closeInventory" class="btn secondary">Close</button>
-        <button id="sellAll" class="btn">Clear Listings</button>
-      </div>
-    </div>
+<!-- Inventory Modal -->
+<div class="modal hidden" id="inventoryModal">
+  <div class="modal-content">
+    <span class="close" id="closeInventory">&times;</span>
+    <h3>Inventory</h3>
+    <div id="inventoryList"></div>
+    <button id="sellAll">Clear All</button>
   </div>
+</div>
 
-  <!-- Listing Modal -->
-  <div id="listingModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>Create Listing</h3>
-      <input id="listingNameInput" placeholder="Item name (e.g. Liquor, Car hire)" class="input-field" />
-      <select id="listingCategory" class="input-field">
-        <option>Weed</option>
-        <option>Liquor</option>
-        <option>Car Hire</option>
-        <option>Other</option>
-      </select>
-      <input id="listingContactInput" placeholder="Contact (phone/email/discord)" class="input-field" />
-      <div class="modal-actions">
-        <button id="submitListingBtn" class="btn">Post</button>
-        <button id="closeListingBtn" class="btn secondary">Cancel</button>
-      </div>
-    </div>
+<!-- Listing Modal -->
+<div class="modal hidden" id="listingModal">
+  <div class="modal-content">
+    <span class="close" id="closeListingBtn">&times;</span>
+    <h3>Add Listing</h3>
+    <input type="text" id="listingNameInput" placeholder="Item Name">
+    <select id="listingCategory"></select>
+    <input type="text" id="listingContactInput" placeholder="Contact">
+    <button id="submitListingBtn">Submit</button>
   </div>
+</div>
 
-  <!-- Chat Modal -->
-  <div id="chatModal" class="modal hidden">
-    <div class="modal-content wide">
-      <h3 id="chatWithTitle">Chat</h3>
-      <div id="chatWindow" class="chat-window"></div>
-      <div class="chat-input-row">
-        <input id="chatInput" class="input-field" placeholder="Type your message..." />
-        <button id="sendChatBtn" class="btn">Send</button>
-        <button id="closeChatBtn" class="btn secondary">Close</button>
-      </div>
-    </div>
+<!-- Chat Modal -->
+<div class="modal hidden" id="chatModal">
+  <div class="modal-content">
+    <span class="close" id="closeChatBtn">&times;</span>
+    <h3 id="chatWithTitle">Chat</h3>
+    <div id="chatWindow" class="chat-window"></div>
+    <input type="text" id="chatInput" placeholder="Type a message">
+    <button id="sendChatBtn">Send</button>
   </div>
+</div>
 
-  <!-- Firebase setup -->
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-    import { getDatabase } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
-    import { getStorage } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js';
-
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DB_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MSG_ID",
-      appId: "YOUR_APP_ID"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    window.firebaseApp = app;
-    window.firebaseAuth = getAuth(app);
-    window.firebaseDB = getDatabase(app);
-    window.firebaseStorage = getStorage(app);
-  </script>
-
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
-  <script src="js/app.js" type="module"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+<script type="module" src="js/app.js"></script>
 </body>
 </html>
 
