--- a/index.html
+++ b/index.html
@@ -2,149 +2,142 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>SnapMap Lite — Enhanced</title>
+  <title>SnapMap Lite — Multiplayer Marketplace</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    crossorigin=""/>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.heat/dist/leaflet-heat.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="app">
     <header>
-      <h1>SnapMap Lite — Enhanced 🚀</h1>
+      <h1>📍 SnapMap Marketplace</h1>
       <div class="controls">
-        <button id="loginBtn" class="btn">Login</button>
+        <button id="loginBtn" class="btn">🔐 Login</button>
         <button id="logoutBtn" class="btn secondary" style="display:none">Logout</button>
-        <label class="small">Avatar:
-          <input id="avatarInput" type="file" accept="image/*" />
+        <label class="small" style="display:none">
+          Avatar: <input id="avatarInput" type="file" accept="image/*" />
         </label>
-        <button id="toggleSim" class="btn">Toggle Sim Friends</button>
-        <button id="spawnItem" class="btn">Spawn Item 🎁</button>
-        <button id="openInventory" class="btn">Inventory 💼</button>
-        <button id="openCosmetics" class="btn">Cosmetics ✨</button>
-        <button id="openListingModal" class="btn">Post Listing</button>
+        <button id="openListingModal" class="btn">📝 Post Listing</button>
+        <button id="openInventory" class="btn">💼 My Listings</button>
+        <button id="spawnItem" class="btn" style="display:none">🎁 Spawn</button>
+        <button id="toggleSim" class="btn secondary" style="display:none">Sim Friends</button>
       </div>
     </header>
+
     <main>
       <aside class="sidebar">
         <div class="profile">
           <div class="avatar-wrapper">
             <img id="myAvatar" src="assets/avatar-default.png" alt="avatar">
-            <div id="avatarCosmetics" class="avatar-cosmetics"></div>
           </div>
           <div>
             <div id="displayName" contenteditable="true" class="name">You</div>
-            <div class="small">Balance: $<span id="balance">100</span></div>
-            <div class="small">Status: <span id="status">Initializing…</span></div>
             <div class="small">👤 <span id="authStatus">Not logged in</span></div>
+            <div class="small">📍 <span id="status">Initializing…</span></div>
           </div>
         </div>
-        <div class="map-controls">
-          <button id="toggleTrail" class="btn small-btn">🛤️ Trail</button>
-          <button id="toggleHeatmap" class="btn small-btn">🔥 Heatmap</button>
-          <button id="toggleAR" class="btn small-btn">📍 AR Hints</button>
-        </div>
+        
         <div class="legend">
-          <h3>Legend</h3>
+          <h3>How It Works</h3>
           <ul>
-            <li>📍 = You</li>
-            <li>🙂 = Friends</li>
-            <li>🎁 = Items</li>
-            <li>🛤️ = Your trail</li>
-            <li>🔥 = Activity heatmap</li>
+            <li>📍 Your location on map</li>
+            <li>🙂 Other users nearby</li>
+            <li>📌 Posted listings</li>
+            <li>💬 Message sellers directly</li>
           </ul>
         </div>
+        
         <div class="notes">
-          <strong>Privacy</strong>
-          <p>Location sharing with Firebase. Sign in to sync with friends!</p>
+          <strong>Getting Started</strong>
+          <ol style="font-size:13px;padding-left:20px;margin:8px 0">
+            <li>Sign up/Login</li>
+            <li>Allow location access</li>
+            <li>Post a listing</li>
+            <li>See others' listings on map</li>
+            <li>Message sellers!</li>
+          </ol>
         </div>
       </aside>
+
       <section class="map-wrap">
         <div id="map"></div>
-        <div id="arOverlay" class="ar-overlay hidden"></div>
       </section>
     </main>
   </div>
 
-  <!-- Login Modal (you already had this) -->
+  <!-- Login Modal -->
   <div id="loginModal" class="modal hidden">
     <div class="modal-content">
-      <h3>🔐 Sign In</h3>
+      <h3>🔐 Sign In / Sign Up</h3>
       <input type="email" id="emailInput" placeholder="Email" class="input-field" />
       <input type="password" id="passwordInput" placeholder="Password" class="input-field" />
-      <div class="modal-actions">
-        <button id="signInBtn" class="btn">Sign In</button>
-        <button id="signUpBtn" class="btn secondary">Sign Up</button>
-        <button id="closeLoginBtn" class="btn secondary">Cancel</button>
-      </div>
       <div id="authError" class="error-msg"></div>
+      <div class="modal-actions">
+        <button id="closeLoginBtn" class="btn secondary">Cancel</button>
+        <button id="signInBtn" class="btn">Sign In</button>
+        <button id="signUpBtn" class="btn">Sign Up</button>
+      </div>
     </div>
   </div>
 
-  <!-- Inventory modal (unchanged, reused for listings preview) -->
+  <!-- Create Listing Modal -->
+  <div id="listingModal" class="modal hidden">
+    <div class="modal-content">
+      <h3>📝 Post New Listing</h3>
+      <input type="text" id="listingNameInput" placeholder="Item/Service Name" class="input-field" />
+      <select id="listingCategory" class="input-field">
+        <!-- Populated by JS from categories.js -->
+      </select>
+      <input type="text" id="listingContactInput" placeholder="Contact (phone/email)" class="input-field" />
+      <div class="modal-actions">
+        <button id="closeListingBtn" class="btn secondary">Cancel</button>
+        <button id="submitListingBtn" class="btn">Post Listing</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Inventory (My Listings) Modal -->
   <div id="inventoryModal" class="modal hidden">
     <div class="modal-content">
-      <h3>Your Inventory & Listings 💼</h3>
+      <h3>💼 My Listings</h3>
       <div id="inventoryList"></div>
       <div class="modal-actions">
         <button id="closeInventory" class="btn secondary">Close</button>
-        <button id="sellAll" class="btn">Clear Listings</button>
+        <button id="sellAll" class="btn">Clear All</button>
       </div>
     </div>
   </div>
 
-  <!-- Listing Modal (new) -->
-  <div id="listingModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>Create Listing</h3>
-      <input id="listingNameInput" placeholder="Item name (e.g. Liquor, Car hire)" class="input-field" />
-      <select id="listingCategory" class="input-field">
-        <option>Weed</option>
-        <option>Liquor</option>
-        <option>Car Hire</option>
-        <option>Other</option>
-      </select>
-      <input id="listingContactInput" placeholder="Contact (phone/email/discord)" class="input-field" />
-      <div class="modal-actions">
-        <button id="submitListingBtn" class="btn">Post</button>
-        <button id="closeListingBtn" class="btn secondary">Cancel</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Chat Modal (new) -->
+  <!-- Chat Modal -->
   <div id="chatModal" class="modal hidden">
-    <div class="modal-content wide">
+    <div class="modal-content">
       <h3 id="chatWithTitle">Chat</h3>
-      <div id="chatWindow" class="chat-window"></div>
-      <div class="chat-input-row">
-        <input id="chatInput" class="input-field" placeholder="Type your message..." />
-        <button id="sendChatBtn" class="btn">Send</button>
+      <div id="chatWindow"></div>
+      <input type="text" id="chatInput" placeholder="Type a message..." />
+      <div class="modal-actions">
         <button id="closeChatBtn" class="btn secondary">Close</button>
+        <button id="sendChatBtn" class="btn">Send</button>
       </div>
     </div>
   </div>
 
-  <!-- Firebase config (unchanged except you must replace placeholders) -->
+  <!-- Firebase SDK -->
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
     import { getAuth } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
     import { getDatabase } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
     import { getStorage } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js';
 
-    // TODO: Replace with your Firebase config
+    // TODO: Replace with your actual Firebase config
     const firebaseConfig = {
-  apiKey: "AIzaSyAq8yzrDUtsJbVk9Vl-H5d18rFWvPl9T_4",
-  authDomain: "snapmap-lite.firebaseapp.com",
-  databaseURL: "https://snapmap-lite-default-rtdb.firebaseio.com",
-  projectId: "snapmap-lite",
-  storageBucket: "snapmap-lite.firebasestorage.app",
-  messagingSenderId: "874569389218",
-  appId: "1:874569389218:web:4dd9cd48cb2fa2a74e73fb",
-  measurementId: "G-R0MNRM3NCG"
-};
+      apiKey: "AIzaSyBXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+      authDomain: "your-project.firebaseapp.com",
+      databaseURL: "https://your-project.firebaseio.com",
+      projectId: "your-project-id",
+      storageBucket: "your-project.appspot.com",
+      messagingSenderId: "123456789",
+      appId: "1:123456789:web:xxxxx"
+    };
 
     const app = initializeApp(firebaseConfig);
     window.firebaseApp = app;
@@ -153,9 +146,14 @@
     window.firebaseStorage = getStorage(app);
   </script>
 
+  <!-- Leaflet -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
-  <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
-  <script src="js/app.js" type="module"></script>
+  
+  <!-- Categories -->
+  <script type="module" src="js/categories.js"></script>
+  
+  <!-- Main App -->
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
 
