--- a/index.html
+++ b/index.html
@@ -4,42 +4,93 @@
   <meta charset="utf-8" />
   <title>SnapMap Lite — Enhanced</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <link rel="stylesheet"
-        href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
+        href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        crossorigin=""/>
+
   <link rel="stylesheet" href="css/style.css">
+
   <style>
-    /* Ensure modals cover everything when active */
     .modal { z-index: 2000; }
-    .hidden { display:none; }
-    #app { display: grid; grid-template-columns: 320px 1fr; height: 100vh; }
-    main { display:flex; }
-    .map-wrap { flex:1; position:relative; }
-    #map { width:100%; height:100%; }
-    .avatar-cosmetics { margin-top:6px; }
+    .hidden { display: none; }
+
+    #app {
+      display: grid;
+      grid-template-columns: 320px 1fr;
+      height: 100vh;
+    }
+
+    main { display: flex; }
+    .map-wrap { flex: 1; position: relative; }
+    #map { width: 100%; height: 100%; }
+
+    .avatar-cosmetics { margin-top: 6px; }
+
+    /* Header controls layout */
+    .controls {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 12px;
+      flex-wrap: wrap;
+    }
+
+    .left-controls,
+    .right-controls {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .icon-btn {
+      padding: 8px 10px;
+      font-size: 16px;
+      cursor: pointer;
+    }
   </style>
 </head>
+
 <body>
   <div id="app">
+
+    <!-- HEADER -->
     <header>
       <h1>SnapMap Lite — Enhanced 🚀</h1>
+
       <div class="controls">
-        <button id="loginBtn" class="btn">Login</button>
-        <button id="logoutBtn" class="btn secondary" style="display:none">Logout</button>
-        <label class="small">Avatar: <input id="avatarInput" type="file" accept="image/*" /></label>
-        <button id="toggleSim" class="btn">Toggle Sim Friends</button>
-        <button id="spawnItem" class="btn">Spawn Item 🎁</button>
-        <button id="openInventory" class="btn">Inventory 💼</button>
-        <button id="openListingModal" class="btn">Post Listing</button>
+        <!-- LEFT -->
+        <div class="left-controls">
+          <button id="loginBtn" class="btn">Login</button>
+          <button id="logoutBtn" class="btn secondary hidden">Logout</button>
+        </div>
+
+        <!-- RIGHT -->
+        <div class="right-controls">
+          <label class="small">
+            Avatar
+            <input id="avatarInput" type="file" accept="image/*" />
+          </label>
+
+          <button id="toggleSim" class="icon-btn" title="Toggle Sim Friends">🙂</button>
+          <button id="spawnItem" class="icon-btn" title="Spawn Item">🎁</button>
+          <button id="openInventory" class="icon-btn" title="Inventory">💼</button>
+          <button id="openListingModal" class="btn">Post Listing</button>
+        </div>
       </div>
     </header>
 
+    <!-- MAIN -->
     <main>
+
+      <!-- SIDEBAR -->
       <aside class="sidebar">
         <div class="profile">
           <div class="avatar-wrapper">
             <img id="myAvatar" src="assets/avatar-default.png" alt="avatar">
             <div id="avatarCosmetics" class="avatar-cosmetics"></div>
           </div>
+
           <div>
             <div id="displayName" contenteditable="true" class="name">You</div>
             <div class="small">Balance: $<span id="balance">100</span></div>
@@ -47,6 +98,7 @@
             <div class="small">👤 <span id="authStatus">Not logged in</span></div>
           </div>
         </div>
+
         <div class="legend">
           <h3>Legend</h3>
           <ul>
@@ -58,13 +110,15 @@
         </div>
       </aside>
 
+      <!-- MAP -->
       <section class="map-wrap">
         <div id="map"></div>
       </section>
+
     </main>
   </div>
 
-  <!-- Login Modal -->
+  <!-- LOGIN MODAL -->
   <div id="loginModal" class="modal hidden">
     <div class="modal-content">
       <h3>🔐 Sign In</h3>
@@ -79,7 +133,7 @@
     </div>
   </div>
 
-  <!-- Inventory Modal -->
+  <!-- INVENTORY MODAL -->
   <div id="inventoryModal" class="modal hidden">
     <div class="modal-content">
       <h3>Your Inventory & Listings 💼</h3>
@@ -91,18 +145,18 @@
     </div>
   </div>
 
-  <!-- Listing Modal -->
+  <!-- LISTING MODAL -->
   <div id="listingModal" class="modal hidden">
     <div class="modal-content">
       <h3>Create Listing</h3>
-      <input id="listingNameInput" placeholder="Item name (e.g. Liquor, Car hire)" class="input-field" />
+      <input id="listingNameInput" placeholder="Item name" class="input-field" />
       <select id="listingCategory" class="input-field">
         <option>Weed</option>
         <option>Liquor</option>
         <option>Car Hire</option>
         <option>Other</option>
       </select>
-      <input id="listingContactInput" placeholder="Contact (phone/email/discord)" class="input-field" />
+      <input id="listingContactInput" placeholder="Contact info" class="input-field" />
       <div class="modal-actions">
         <button id="submitListingBtn" class="btn">Post</button>
         <button id="closeListingBtn" class="btn secondary">Cancel</button>
@@ -110,7 +164,7 @@
     </div>
   </div>
 
-  <!-- Chat Modal -->
+  <!-- CHAT MODAL -->
   <div id="chatModal" class="modal hidden">
     <div class="modal-content wide">
       <h3 id="chatWithTitle">Chat</h3>
@@ -123,7 +177,7 @@
     </div>
   </div>
 
-  <!-- Firebase setup -->
+  <!-- FIREBASE -->
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
     import { getAuth } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
@@ -151,6 +205,7 @@
   <script src="js/app.js" type="module"></script>
 </body>
 </html>
+
 
 
 
