--- a/index.html
+++ b/index.html
@@ -1,210 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>SnapMap Lite — Enhanced</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <link rel="stylesheet"
-        href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        crossorigin=""/>
-
-  <link rel="stylesheet" href="css/style.css">
-
-  <style>
-    .modal { z-index: 2000; }
-    .hidden { display: none; }
-
-    #app {
-      display: grid;
-      grid-template-columns: 320px 1fr;
-      height: 100vh;
-    }
-
-    main { display: flex; }
-    .map-wrap { flex: 1; position: relative; }
-    #map { width: 100%; height: 100%; }
-
-    .avatar-cosmetics { margin-top: 6px; }
-
-    /* Header controls layout */
-    .controls {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
-
-    .left-controls,
-    .right-controls {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .icon-btn {
-      padding: 8px 10px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Live World Board</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div id="app">
+  <h1>🌍 Live World Board</h1>
+  <p>Click on the map to drop a pin! Choose a vibe color and share a note.</p>
+  <div id="map"></div>
 
-    <!-- HEADER -->
-    <header>
-      <h1>SnapMap Lite — Enhanced 🚀</h1>
-
-      <div class="controls">
-        <!-- LEFT -->
-        <div class="left-controls">
-          <button id="loginBtn" class="btn">Login</button>
-          <button id="logoutBtn" class="btn secondary hidden">Logout</button>
-        </div>
-
-        <!-- RIGHT -->
-        <div class="right-controls">
-          <label class="small">
-            Avatar
-            <input id="avatarInput" type="file" accept="image/*" />
-          </label>
-
-          <button id="toggleSim" class="icon-btn" title="Toggle Sim Friends">🙂</button>
-          <button id="spawnItem" class="icon-btn" title="Spawn Item">🎁</button>
-          <button id="openInventory" class="icon-btn" title="Inventory">💼</button>
-          <button id="openListingModal" class="btn">Post Listing</button>
-        </div>
-      </div>
-    </header>
-
-    <!-- MAIN -->
-    <main>
-
-      <!-- SIDEBAR -->
-      <aside class="sidebar">
-        <div class="profile">
-          <div class="avatar-wrapper">
-            <img id="myAvatar" src="assets/avatar-default.png" alt="avatar">
-            <div id="avatarCosmetics" class="avatar-cosmetics"></div>
-          </div>
-
-          <div>
-            <div id="displayName" contenteditable="true" class="name">You</div>
-            <div class="small">Balance: $<span id="balance">100</span></div>
-            <div class="small">Status: <span id="status">Initializing…</span></div>
-            <div class="small">👤 <span id="authStatus">Not logged in</span></div>
-          </div>
-        </div>
-
-        <div class="legend">
-          <h3>Legend</h3>
-          <ul>
-            <li>📍 = You</li>
-            <li>🙂 = Friends</li>
-            <li>🎁 = Items</li>
-            <li>📌 = Listings</li>
-          </ul>
-        </div>
-      </aside>
-
-      <!-- MAP -->
-      <section class="map-wrap">
-        <div id="map"></div>
-      </section>
-
-    </main>
-  </div>
-
-  <!-- LOGIN MODAL -->
-  <div id="loginModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>🔐 Sign In</h3>
-      <input type="email" id="emailInput" placeholder="Email" class="input-field" />
-      <input type="password" id="passwordInput" placeholder="Password" class="input-field" />
-      <div class="modal-actions">
-        <button id="signInBtn" class="btn">Sign In</button>
-        <button id="signUpBtn" class="btn secondary">Sign Up</button>
-        <button id="closeLoginBtn" class="btn secondary">Cancel</button>
-      </div>
-      <div id="authError" class="error-msg"></div>
-    </div>
-  </div>
-
-  <!-- INVENTORY MODAL -->
-  <div id="inventoryModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>Your Inventory & Listings 💼</h3>
-      <div id="inventoryList"></div>
-      <div class="modal-actions">
-        <button id="closeInventory" class="btn secondary">Close</button>
-        <button id="sellAll" class="btn">Clear Listings</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- LISTING MODAL -->
-  <div id="listingModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>Create Listing</h3>
-      <input id="listingNameInput" placeholder="Item name" class="input-field" />
-      <select id="listingCategory" class="input-field">
-        <option>Weed</option>
-        <option>Liquor</option>
-        <option>Car Hire</option>
-        <option>Other</option>
-      </select>
-      <input id="listingContactInput" placeholder="Contact info" class="input-field" />
-      <div class="modal-actions">
-        <button id="submitListingBtn" class="btn">Post</button>
-        <button id="closeListingBtn" class="btn secondary">Cancel</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- CHAT MODAL -->
-  <div id="chatModal" class="modal hidden">
-    <div class="modal-content wide">
-      <h3 id="chatWithTitle">Chat</h3>
-      <div id="chatWindow" class="chat-window"></div>
-      <div class="chat-input-row">
-        <input id="chatInput" class="input-field" placeholder="Type your message..." />
-        <button id="sendChatBtn" class="btn">Send</button>
-        <button id="closeChatBtn" class="btn secondary">Close</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- FIREBASE -->
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-    import { getDatabase } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
-    import { getStorage } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js';
-
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DB_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MSG_ID",
-      appId: "YOUR_APP_ID"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    window.firebaseApp = app;
-    window.firebaseAuth = getAuth(app);
-    window.firebaseDB = getDatabase(app);
-    window.firebaseStorage = getStorage(app);
-  </script>
-
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
-  <script src="js/app.js" type="module"></script>
+  <!-- Scripts -->
+  <script type="module" src="firebase.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
